<resources>
    <string name="app_name">MileIO</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="zero_distance">That trip was short. 0 miles</string>
    <string name="leave_car">Leave car button not implemented so not included</string>
    <string name="car_owner">Test Car</string>
    <string name="car_code">Car code:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_sharing">You are not sharing a car yet</string>
    <string name="join_car">Join a car</string>
    <string name="host_car">Start a new car</string>
    <string name="join_title">Join car code</string>
    <string name="join_confirm">Join</string>
</resources>
