<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/not_car"
        android:text="@string/car_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_font_size"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/start_car"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/not_car"
        android:background="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryLight"
        android:text="@string/host_car" />

    <Button
        android:id="@+id/join_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryLight"
        android:text="@string/join_car"
        android:layout_below="@+id/start_car" />

</RelativeLayout>